--- a/client/form/form.tpl.html
+++ b/client/form/form.tpl.html
@@ -6,7 +6,11 @@
 		<form>
 			<div class="form-group">
 				<label for="userName" class="col-sm-12 control-label">Your Name</label>
-				<input type="text" class="form-control" id="userName" ng-model="signup.name">
+				<input type="text" class="form-control" id="userName" ng-model="signup.name" required>
+			</div>
+			<div class="form-group">
+				<label for="userEmail" class="col-sm-12 control-label">Your Email</label>
+				<input type="text" class="form-control" id="userEmail" ng-model="signup.email" required>
 			</div>
 			<h3>Ninja Information</h3>
 			<div class="row">
@@ -14,13 +18,13 @@
 					<div class="col-lg-6">
 						<div class="form-group">
 							<label for="ninjaName" class="control-label">Name</label>
-							<input type="text" class="form-control" id="ninjaName" ng-model="ninja.name">
+							<input type="text" class="form-control" id="ninjaName" ng-model="ninja.name" required>
 						</div>
 					</div>
 					<div class="col-lg-2">
 						<div class="form-group">
 							<label for="ninjaAge" class="control-label">Age</label>
-							<input type="number" class="form-control" id="ninjaAge" min="6" max="18" ng-model="ninja.age">
+							<input type="number" class="form-control" id="ninjaAge" min="6" max="18" ng-model="ninja.age" required>
 						</div>
 					</div>
 					<div class="col-lg-2">
