--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <title>coder-dojo-signup</title>
+  <title>Coder Dojo @ Bankwest</title>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.css">
   <link rel="stylesheet" href="styles/css/app.css"/>
 </head>
@@ -17,7 +17,8 @@
     <script src="lib/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="lib/ngFx/dist/ngFx.js"></script>
     <script src="app.js"></script>
-    <script src="form/form.js"></script>
+    <script src="form/formController.js"></script>
+    <script src="accept/acceptController.js"></script>
     <script src="common/directives.js"></script>
   </body>
 </html>
