--- a/client/form/form.tpl.html
+++ b/client/form/form.tpl.html
@@ -40,7 +40,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<button type="button" class="btn btn-success">Add Ninja</button>
+				<button type="button" ng-click="addNinja()" class="btn btn-success">Add Ninja</button>
 			</div>
 		</div>
 		<h3>Activities</h3>
@@ -59,7 +59,7 @@
 		<div class="row">
 			<div class="form-group col-lg-12">
 				<label for="dietaryConsideration" class="control-label">Some food may be supplied as part of Coder Dojo, do your Ninjas have any special dietary requirements?</label>
-				<textarea rows="4" columns="50" id="dietaryConsideration" class="form-control"></textarea>
+				<textarea rows="4" columns="50" id="dietaryConsideration" ng-model="signup.dietaryConsiderations" class="form-control"></textarea>
 			</div>
 		</div>
 		<button type="submit" class="btn btn-primary">Submit</button>
