Added the view route with a basic table.

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
     <script src="app.js"></script>
     <script src="form/formController.js"></script>
     <script src="accept/acceptController.js"></script>
+    <script src="view/viewController.js"></script>
     <script src="common/directives.js"></script>
   </body>
 </html>
