--- a/client/form/form.tpl.html
+++ b/client/form/form.tpl.html
@@ -2,6 +2,12 @@
 	<div class="row">
 		<h1 class="col-sm-12">Coder Dojo @ Bankwest Term 3 Sign Up</h1> 
 	</div>
+	<div class="row">
+		<p>Coder Dojo is a series of free programming classes for kids aged 6-17 held on the Podium level of Bankwest place. It is open to Bankwest and Commonwealth Bank colleagues and friends so feel free to invite anyone else; as long as they have a way of getting into the building.</p>
+		<p>Term 3 will be starting on the 4th of August and will run weekly from 4:30-6:30pm on Tuesdays for 6 weeks.</p>
+		<p><strong>Please note that children 11 years old or younger will need to be accompanied by a guardian.</strong></p>
+		<p>We will be doing a majority of the activities on laptops, the ninjas can bring in their own or we can supply them, just make sure you tick the 'Laptop Required' field.</p>
+	</div>
 	<form ng-submit="registerNinja()">
 		<div class="form-group col-sm-12 col-md-6">
 			<label for="userName" class="control-label">Your Name</label>
@@ -27,7 +33,7 @@
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-6">
-					<div class="form-group">
+					<div class="form-group" tooltip="Ninjas can bring their own laptops or we can supply them. If you need a laptop, please select this box.">
 						<label for="ninjaLaptop" class="control-label">Laptop Required</label>
 							<input type="checkbox" class="control-checkbox form-control" id="ninjaLaptop" ng-model="ninja.laptopRequired">
 					</div>
