--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
     <div ui-view></div>
 
     <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="lib/ngFx/dist/ngFx.js"></script>
