--- a/client/index.html
+++ b/client/index.html
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
-<html ng-app="coder-dojo-signup">
+<html>
 <head>
-  <meta charset='utf8'>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
-  <title>Coder Dojo @ Bankwest</title>
-  <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.css">
-  <link rel="stylesheet" href="styles/css/app.css"/>
+    <meta charset="utf-8">
+    <title>BW Coder Dojo</title>
+    <meta name="description" content="#description">
+
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
-  <body>
+<body ng-app="coder-dojo-signup">
 
+<nav class="navbar navbar-inverse navbar-fixed-top" ng-init="navCollapsed = true">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <div class="navbar-brand">Bankwest Coder Dojo Registration</div>
+        </div>
+
+    </div>
+</nav>
+
+<div class="container-fluid" style="padding-top:70px">
     <div ui-view></div>
+</div>
 
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="lib/gsap/src/uncompressed/TweenMax.js"></script>
-    <script src="lib/ngFx/dist/ngFx.js"></script>
-    <script src="app.js"></script>
-    <script src="form/formController.js"></script>
-    <script src="app/accept/acceptController.js"></script>
-    <script src="view/viewController.js"></script>
-    <script src="common/directives.js"></script>
-  </body>
+<!-- inject:js -->
+<!-- endinject-->
+</body>
 </html>
