Deleted reference to library I am not using

--- a/client/app/form/form.tpl.html
+++ b/client/app/form/form.tpl.html
@@ -33,7 +33,7 @@
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-6">
-					<div class="form-group" tooltip="Ninjas can bring their own laptops or we can supply them. If you need a laptop, please select this box.">
+					<div class="form-group">
 						<label for="ninjaLaptop" class="control-label">Laptop Required</label>
 							<input type="checkbox" class="control-checkbox form-control" id="ninjaLaptop" ng-model="ninja.laptopRequired">
 					</div>
