--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -3,29 +3,37 @@
         <div class="col-md-2 col-md-offset-2 text">
             <h2>5.10.2015</h2>
         </div>
-        <div class="col-md-4">
-            <i class="fa fa-female fa-5x"></i>
+        <div class="col-md-4 text-center">
+            <i class="fa fa-female fa-5x"></i>&nbsp;&nbsp;&nbsp;
             <span><img src="images/coderdojo.png"/></span>
         </div>
         <div class="col-md-4 text time">
             <h2>10am - 3pm</h2>
         </div>
     </div>
-
     <div class="row">
-        <h1 class="col-md-8 col-md-offset-2">Girls Coder Dojo Event at Bankwest</h1>
+        <h3 class="col-md-6 col-md-offset-3 text-center">Girls Coder Dojo Event</h3>
     </div>
+    <div class="row">
+        <h5 class="col-md-6 col-md-offset-3 text-center closer">Bankwest Place 300 Murray Street, Perth WA</h5>
+    </div>
+    <br/>
+
     <div class="row">
         <div class="col-md-12">
             <p>Coder Dojo is a programming club for young people between the ages of 7 and 17. At a Dojo, young people learn how to code, develop websites,
                 apps, programs, build and program robots and explore technology in an informal and creative environment. The first ever Girls Coder Dojo Event
-                at Bankwest is aimed to help bridge the gender gap in technology based fields for now and future generations.</p>
+                at Bankwest is aimed to help bridge the gender gap in technology based fields for now and future generations. The event will be run by all
+                female mentors actively working in the technology field who hope to inspire the female ninjas of Coder Dojo WA.</p>
             <br/>
 
-            <p>Space is limited for the event so you need a registration code to continue. If you do not have a registration code, please contact the Coder Dojo
-                Champions of the Dojo you regularly attend.</p>
+            <p>This is an exclusive event for female ninjas actively involved in a Coder Dojo in WA and space is limited, so you need a registration code to
+                continue. If you do not have a registration code, please contact the Coder Dojo
+                Champions of the Dojo you regularly attend. Thank you for your cooperation.</p>
         </div>
     </div>
+    <br/>
+
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form ng-submit="vm.submit()">
@@ -35,6 +43,14 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
+        </div>
+    </div>
+
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <p>For any other queries please contact us at <b>coderdojo@bankwest.com.au</b></p>
         </div>
     </div>
 </div>
