--- a/client/app/error/error.html
+++ b/client/app/error/error.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-6 col-md-offset-3 text-center">
 			<h1>Error</h1>
 			<h5>An error has occurred, either try again or let us know that an error has occurred at coderdojo@bankwest.com.au.</h5>
 		</div>
