--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -1,73 +1,51 @@
 <div class="container">
-	<div class="row">
-		<h1 class="col-sm-12">Coder Dojo @ Bankwest Term 3 Sign Up</h1> 
-	</div>
-	<div class="row">
-		<p>Coder Dojo is a series of free programming classes for kids aged 6-17 held on the Podium level of Bankwest place. It is open to Bankwest and Commonwealth Bank colleagues and friends so feel free to invite anyone else; as long as they have a way of getting into the building.</p>
-		<p>Term 3 will be starting on the 4th of August and will run weekly from 4:30-6:00pm on Tuesdays for 6 weeks.</p>
-		<p><strong>Please note that children 11 years old or younger will need to be accompanied by a guardian.</strong></p>
-		<p>We will be doing a majority of the activities on laptops, the ninjas can bring in their own or we can supply them, just make sure you tick the 'Laptop Required' field.</p>
-	</div>
-	<form ng-submit="registerNinja()">
-		<div class="form-group col-sm-12 col-md-6">
-			<label for="userName" class="control-label">Your Name</label>
-			<input type="text" class="form-control" id="userName" ng-model="signup.name" required>
-		</div>
-		<div class="form-group col-sm-12 col-md-6">
-			<label for="userEmail" class="control-label">Your Email</label>
-			<input type="email" class="form-control" id="userEmail" ng-model="signup.email" required>
-		</div>
-		<h3>Ninja Information</h3>
-		<div class="row">
-			<div class="col-xs-12" ng-repeat="ninja in signup.ninjaInformation">
-				<div class="col-sm-5 col-xs-8">
-					<div class="form-group">
-						<label for="ninjaName" class="control-label">Name</label>
-						<input type="text" class="form-control" id="ninjaName" ng-model="ninja.name" required>
-					</div>
-				</div>
-				<div class="col-sm-2 col-xs-4">
-					<div class="form-group">
-						<label for="ninjaAge" class="control-label">Age</label>
-						<input type="number" class="form-control" id="ninjaAge" min="6" max="17" ng-model="ninja.age" required>
-					</div>
-				</div>
-				<div class="col-sm-3 col-xs-6">
-					<div class="form-group">
-						<label for="ninjaLaptop" class="control-label">Laptop Required</label>
-							<input type="checkbox" class="control-checkbox form-control" id="ninjaLaptop" ng-model="ninja.laptopRequired">
-					</div>
-				</div>
-				<div class="col-sm-2 col-xs-6">
-					<button type="button" class="btn btn-danger btn-remove" ng-click="removeNinja(ninja)">Remove</button>
-				</div>
-			</div>
-			
-		</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<button type="button" ng-click="addNinja()" class="btn btn-success">Add Ninja</button>
-			</div>
-		</div>
-		<h3>Activities</h3>
-		<div class="row">
-			<div class="form-group col-lg-12">
-				<label for="activities" class="control-label">We run a range of activities for the ninjas, what actvities would they be interested in? (Tick all that apply)</label>
-				<div class="checkbox" ng-repeat="activity in signup.activities">
-				  <label>
-				    <input type="checkbox" ng-model="activity.selected" >
-				    {{activity.name}}
-				  </label>
-				</div>
-			</div>
-		</div>
-		<h3>Dietary Considerations</h3>
-		<div class="row">
-			<div class="form-group col-lg-12">
-				<label for="dietaryConsideration" class="control-label">Some food may be supplied as part of Coder Dojo, do your Ninjas have any special dietary requirements?</label>
-				<textarea rows="4" columns="50" id="dietaryConsideration" ng-model="signup.dietaryConsiderations" class="form-control"></textarea>
-			</div>
-		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
-	</form>
+    <div class="row">
+        <h2 class="col-md-12 text-center">Coder Dojo Girls Event at Bankwest</h2>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Info:</h4>
+
+            <p>The first Girls only Coder Dojo Event at Bankwest, consisting of only female mentors and female ninjas, will be held on Monday 5 October, 2015
+                from 10:00am to 3:00pm at Bankwest Place located in the Perth CBD. During that time period the ninjas will get to choose from a number of different
+                stations where they can build and program robots, create websites or animate scenes and create games. At the end of the event we will
+                be holding a showcase, where the ninjas get to show off the amazing things they created. The event will include morning tea and afternoon snacks
+                but please be advised that all ninjas and parents or guardians who may be accompanying them are expected to bring their own lunch.
+            </p>
+            <p>
+                We will be providing laptops but if a ninja has a laptop they would like to use, they are welcome to bring it. However, please note that we may
+                not have a way for the ninja to participate to show off their work in the showcase if they are using their own laptop. They may want to bring a
+                VGA adaptor if they have one.
+            </p>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Registration:</h4>
+        </div>
+        <form class="col-md-12" role="form" ng-submit="vm.register()">
+            <div ng-repeat="ninja in vm.form.ninjas" class="form-inline">
+                <div  class="form-group">
+                    <label for="ninjaFirstName" class="sr-only">Ninja First Name</label>
+                    <input type="text" class="form-control" id="ninjaFirstName" placeholder="Ninja First Name" ng-model="ninja.firstName" required>
+
+                </div>
+                <div class="form-group">
+                    <label for="ninjaLastName" class="sr-only">Ninja Last Name</label>
+                    <input type="text" class="form-control" id="ninjaLastName" placeholder="Ninja Last Name" ng-model="ninja.lastName" required>
+                </div>
+                <div class="form-group">
+                    <!--<div class="input-group" ng-init="status.opened=false">-->
+                        <!--<input type="date" class="form-control" datepicker-popup ng-model="ninja.birthday" is-open="status.opened" min-date="minDate"-->
+                               <!--max-date="maxDate" ng-required="true" close-text="Close" />-->
+                    <!--</div>-->
+                </div>
+            </div>
+            <!--<div class="form-group">-->
+
+            <!--</div>-->
+
+        </form>
+    </div>
 </div>
