--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -27,7 +27,7 @@
         <div class="col-md-12">
             <h4>Ninja Registration:</h4>
         </div>
-        <form class="col-md-12" role="form" ng-submit="vm.register()">
+        <form name="rego" class="col-md-12" role="form" ng-submit="vm.register()">
             <div ng-repeat="ninja in vm.form.ninjas" class="form-inline">
                 <div class="form-group">
                     <label for="ninjaFirstName" class="sr-only">Ninja First Name</label>
@@ -76,7 +76,7 @@
             <div ng-show="!vm.isBw" class="form-inline">
                 <div class="form-group">
                     <label for="dojo" class="control-label">What Dojo Do you Regularly Attend?</label>
-                    <input type="text" class="form-control" id="dojo" placeholder="Coder Dojo Name" ng-model="vm.form.dojo" ng-required="true" required/>
+                    <input type="text" class="form-noncontrol" id="dojo" placeholder="Coder Dojo Name" ng-model="vm.form.dojo" />
                 </div>
             </div>
             <br/>
@@ -109,13 +109,11 @@
                 <div class="form-inline">
                     <div class="form-group">
                         <label for="bwFirstName" class="sr-only">Bankwest Contact First Name</label>
-                        <input type="text" class="form-control" id="bwFirstName" placeholder="Contact First Name" ng-model="vm.form.bwContact.firstName"
-                               ng-required="true" required/>
+                        <input type="text" class="form-noncontrol" id="bwFirstName" placeholder="Contact First Name" ng-model="vm.form.bwContact.firstName" />
                     </div>
                     <div class="form-group">
                         <label for="bwLastName" class="sr-only">Bankwest Contact Last Name</label>
-                        <input type="text" class="form-control" id="bwLastName" placeholder="Contact Last Name" ng-model="vm.form.bwContact.lastName"
-                               ng-required="true" required/>
+                        <input type="text" class="form-noncontrol" id="bwLastName" placeholder="Contact Last Name" ng-model="vm.form.bwContact.lastName" />
                     </div>
                 </div>
             </div>
@@ -142,7 +140,7 @@
 
 
             <div class="form-group">
-                <button type="submit" class="btn btn-bw" ng-click="vm.register()">Submit Registration</button>
+                <button type="submit" class="btn btn-bw">Submit Registration</button>
             </div>
         </form>
     </div>
