--- a/client/app/accept/accept.html
+++ b/client/app/accept/accept.html
@@ -1,10 +1,15 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-10 col-md-offset-1">
             <h1>Congratulations!</h1>
-            <h5 class="text-center">You have successfully signed up for the Coder Dojo Girls Event at Bankwest on October 5.
-                You should receive a calendar invite soon and if you have any further questions please contact us at: coderdojo@bankwest.com.au
-            </h5>
+            <p class="text-center"><b>You have successfully signed up for the Coder Dojo Girls Event at Bankwest on 5 October, 2015.</b> We will be sending you an
+                email with a reminder and any necessary information in the week before the event. Please remember that if a ninja is under the age of 12 an adult
+                must attend the event with them and accompany them at all times. Space is limited for this event so if you find any of the ninjas you registered
+                can no longer attend please let us know as soon as possible.</p>
+
+            <br/>
+            <p class="text-center">If you have any further questions please contact us at: <b>coderdojo@bankwest.com.au</b>
+            </p>
         </div>
     </div>
 </div>
