Renamed coder dojo to be one word

--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row">
-        <h2 class="col-md-12 text-center">Coder Dojo Girls Event at Bankwest</h2>
+        <h2 class="col-md-12 text-center">CoderDojo Girls Event at Bankwest</h2>
     </div>
     <div class="row">
         <div class="col-md-12">
             <h4>Info:</h4>
 
-            <p>The first Girls only Coder Dojo Event at Bankwest, consisting of only female mentors and female ninjas, will be held on Monday 5 October, 2015
+            <p>The first Girls only CoderDojo Event at Bankwest, consisting of only female mentors and female ninjas, will be held on Monday 5 October, 2015
                 from 10:00am to 3:00pm at Bankwest Place located in the Perth CBD. During that time period the ninjas will get to choose from a number of
                 different
                 stations where they can build and program robots, create websites or animate scenes and create games. At the end of the event we will
@@ -76,7 +76,7 @@
             <div ng-show="!vm.isBw" class="form-inline">
                 <div class="form-group">
                     <label for="dojo" class="control-label">What Dojo Do you Regularly Attend?</label>
-                    <input type="text" class="form-noncontrol" id="dojo" placeholder="Coder Dojo Name" ng-model="vm.form.dojo" />
+                    <input type="text" class="form-noncontrol" id="dojo" placeholder="CoderDojo Name" ng-model="vm.form.dojo" />
                 </div>
             </div>
             <br/>
@@ -121,14 +121,14 @@
 
             <h4>Photo Release Waiver:</h4>
             <p>
-                By participating in this Coder Dojo Girls Event, you understand that photos/video may be taken of your child and/or yourself by Bankwest
-                and/or Coder Dojo WA and that these photos/videos may be used in social or other media to promote Bankwest's support of Coder Dojo and the Coder
-                Dojo movement. By attending, you agree to the use of your and/or your child's image for the purposes of promoting Coder Dojo/Bankwest.
+                By participating in this CoderDojo Girls Event, you understand that photos/video may be taken of your child and/or yourself by Bankwest
+                and/or CoderDojo WA and that these photos/videos may be used in social or other media to promote Bankwest's support of CoderDojo and the
+                CoderDojo movement. By attending, you agree to the use of your and/or your child's image for the purposes of promoting CoderDojo/Bankwest.
             </p>
             <div class="checkbox">
                 <label for="photoWaiver">
                     <input type="checkbox" id="photoWaiver" ng-model="vm.form.photoPermission" required/>By checking this box, you understand and give
-                    permission for CoderDojo WA and Bankwest to use photomedia of my child at the Dojo event to promote the Coder Dojo movement.
+                    permission for CoderDojo WA and Bankwest to use photomedia of my child at the Dojo event to promote the CoderDojo movement.
                 </label>
             </div>
             <br/>
