--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -1,23 +1,26 @@
 <div class="container">
     <div class="row">
-        <h2 class="col-md-12 text-center">CoderDojo Girls Event at Bankwest</h2>
+        <h2 class="col-md-12 text-center">CoderDojo Term 1 2016 at Bankwest</h2>
     </div>
     <div class="row">
         <div class="col-md-12">
             <h4>Info:</h4>
 
-            <p>The first Girls only CoderDojo Event at Bankwest, consisting of only female mentors and female ninjas, will be held on Monday 5 October, 2015
-                from 10:00am to 3:00pm at Bankwest Place located in the Perth CBD. During that time period the ninjas will get to choose from a number of
-                different
-                stations where they can build and program robots, create websites or animate scenes and create games. At the end of the event we will
-                be holding a showcase, where the ninjas get to show off the amazing things they created. The event will include morning tea and afternoon snacks
-                but please be advised that all ninjas and parents or guardians who may be accompanying them are expected to bring their own lunch.
+            <p>
+              The 1st Term of CoderDojo form 2016 will begin on the Tuesday the 1st of March and will run for 4 weeks. Sessions will run from 4:30pm till 6pm on the Podium level on Bankwest place.
+            </p>
+            <p>
+              As part of CoderDojo we offer a range of activities shown below however they should not limit themselves to just the ones we provide.
+            </p>
+            <p>
+              At the end of each session we will hold a showcase where ninjas can come up and show their work.
+            </p>
+            <p style="font-weight: 600;">
+              Please note that unlike previous terms, we will not be providing afternoon tea.
             </p>
 
             <p>
-                We will be providing laptops but if a ninja has a laptop they would like to use, they are welcome to bring it. However, please note that we may
-                not have a way for the ninja to participate to show off their work in the showcase if they are using their own laptop. They may want to bring a
-                VGA adaptor if they have one.
+              We will be providing laptops but if a ninja has a laptop they would like to use, they are welcome to bring it.
             </p>
         </div>
     </div>
@@ -121,7 +124,7 @@
 
             <h4>Photo Release Waiver:</h4>
             <p>
-                By participating in this CoderDojo Girls Event, you understand that photos/video may be taken of your child and/or yourself by Bankwest
+                By participating in this CoderDojo Event, you understand that photos/video may be taken of your child and/or yourself by Bankwest
                 and/or CoderDojo WA and that these photos/videos may be used in social or other media to promote Bankwest's support of CoderDojo and the
                 CoderDojo movement. By attending, you agree to the use of your and/or your child's image for the purposes of promoting CoderDojo/Bankwest.
             </p>
