--- a/client/app/accept/accept.html
+++ b/client/app/accept/accept.html
@@ -2,10 +2,7 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <h1>Congratulations!</h1>
-            <p class="text-center"><b>You have successfully signed up for the CoderDojo Girls Event at Bankwest on 5 October, 2015.</b> We will be sending you an
-                email with a reminder and any necessary information in the week before the event. Please remember that if a ninja is under the age of 12 an adult
-                must attend the event with them and accompany them at all times. Space is limited for this event so if you find any of the ninjas you registered
-                can no longer attend please let us know as soon as possible.</p>
+            <p class="text-center"><b>You have successfully signed up for the CoderDojo Term 1 at Bankwest starting on the 1st of March.</b> We will be sending you a calendar invite shortly. Please remember that if a ninja is under the age of 12 an adult must attend the sessions with them and accompany them at all times. Space is limited for this event so if you find any of the ninjas you registered can no longer attend please let us know as soon as possible.</p>
 
             <br/>
             <p class="text-center">If you have any further questions please contact us at: <b>coderdojo@bankwest.com.au</b>
