Signups for term 2 2016.

--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row">
-        <h2 class="col-md-12 text-center">CoderDojo Term 1 2016 at Bankwest</h2>
+        <h2 class="col-md-12 text-center">CoderDojo Term 2 2016 at Bankwest</h2>
     </div>
     <div class="row">
         <div class="col-md-12">
             <h4>Info:</h4>
 
             <p>
-              The 1st Term of CoderDojo form 2016 will begin on the Tuesday the 1st of March and will run for 4 weeks. Sessions will run from 4:30pm till 6pm on the Podium level on Bankwest place.
+              The 2nd Term of CoderDojo form 2016 will begin on the Tuesday the 10th of May and will run for 5 weeks. Sessions will run from 4:30pm till 6pm on the Podium level on Bankwest place.
             </p>
             <p>
               As part of CoderDojo we offer a range of activities shown below however they should not limit themselves to just the ones we provide.
