Finished styling and tidying up form.

--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,17 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.1.2/css/bulma.min.css">
+
     <!-- inject:css -->
     <!-- endinject -->
 </head>
 <body ng-app="coderdojo-signup">
-    <div ui-view></div>
+    <div class="container">
+        <h1 class="title">Bankwest Coder Dojo</h1>
+        <div ui-view></div>
+    </div>
 
 <!-- inject:js -->
 <!-- endinject-->
