--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -1,103 +1,145 @@
-<div class="container">
-    <div class="row">
-        <h2 class="col-md-12 text-center">CoderDojo Term 2 2016 at Bankwest</h2>
+<div class="content">
+    {{vm.text.information}}
+</div>
+
+<form name="form">
+    <h3 class="title">Ninja Information</h3>
+    <p>Note that this event is only ninjas aged 7 to 17 and all ninjas under the age of 12 must be accompanied by an adult at all times</p>
+    <div ng-repeat="ninja in vm.applicant.ninjas">
+        <div class="columns">
+            <div class="column is-3 control">
+                <label class="label">First Name</label>
+                <p class="control">
+                    <input type="text" class="input" name="ninjaFirstName" placeholder="Ninja First Name" ng-model="ninja.firstName" required/>
+                </p>
+            </div>
+            <div class="column is-3 control">
+                <label class="label">Last Name</label>
+                <p class="control">
+                    <input type="text" class="input" name="ninjaLastName" placeholder="Ninja Last Name" ng-model="ninja.lastName" required/>
+                </p>
+            </div>
+            <div class="column is-2 control">
+                <label class="label">Date of Birth</label>
+                <p class="control">
+                    <input type="date" class="input" name="ninjaBday" placeholder="Ninja Last Name" ng-model="ninja.dateOfBirth" required datepicker-popup is-open="opened" min-date="vm.minDate" max-date="vm.maxDate" close-text="Close" min="{{vm.minDate}}" max="{{vm.maxDate}}" ng-blur="vm.validateDateOfBirth(ninja)"/>
+                </p>
+            </div>
+            <div class="column is-1 control" ng-if="vm.applicant.ninjas.length > 1">
+                <p class="control">
+                    <label class="label">Delete</label>
+                    <button type="button" class="button is-danger" ng-click="vm.removeNinja($index)" tooltip="Remove Ninja" tooltip-placement="right">
+                        <i class="fa fa-trash-o fa-lg"></i>
+                    </button>
+                </p>
+            </div>
+        </div> 
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <h4>Info:</h4>
-
-            <p>
-              The 2nd Term of CoderDojo form 2016 will begin on the Tuesday the 10th of May and will run for 5 weeks. Sessions will run from 4:30pm till 6pm on the Podium level on Bankwest place.
-            </p>
-            <p>
-              As part of CoderDojo we offer a range of activities shown below however they should not limit themselves to just the ones we provide.
-            </p>
-            <p>
-              At the end of each session we will hold a showcase where ninjas can come up and show their work.
-            </p>
-            <p style="font-weight: 600;">
-              Please note that unlike previous terms, we will not be providing afternoon tea.
-            </p>
-
-            <p>
-              We will be providing laptops but if a ninja has a laptop they would like to use, they are welcome to bring it.
+    <p class="control">
+        <button type="button" class="button is-primary" ng-click="vm.addNinja()" tooltip="Add Ninja" tooltip-placement="right">
+            <i class="fa fa-plus"></i>&nbsp;&nbsp;Add Another Ninja
+        </button>
+    </p>
+    <h3 class="title">Actvities<h3>
+    <p class="content">We run a range of activities for the ninjas, what activities would they be interested in? (Tick all that apply)</p>
+    <p class="control">
+        <div ng-repeat="activity in vm.text.activities">
+            <label class="checkbox">
+                <input type="checkbox" ng-model="vm.applicant.activities[activity]"/>
+                {{activity}}
+            </label>
+        </div>
+    </p>
+    <h3 class="title">Parent/Guardian Information</h3>
+    <div class="columns is-multiline">
+        <div class="column is-3 control">
+            <label class="label">First Name</label>
+            <p class="control">
+                <input type="text" class="input" name="parentFirstName" placeholder="Parent First Name" ng-model="vm.applicant.parent.firstName" required/>
             </p>
         </div>
-    </div>
-    <br/>
-
-    <div class="row">
-        <div class="col-md-12">
-            <h4>Ninja Registration:</h4>
+        <div class="column is-3 control">
+            <label class="label">Last Name</label>
+            <p class="control">
+                <input type="text" class="input" name="parentLastName" placeholder="Parent Last Name" ng-model="vm.applicant.parent.lastName" required/>
+            </p>
         </div>
-        <form name="rego" class="col-md-12" role="form" ng-submit="vm.register()">
-            <div ng-repeat="ninja in vm.form.ninjas" class="form-inline">
-                <div class="form-group">
-                    <label for="ninjaFirstName" class="sr-only">Ninja First Name</label>
-                    <input type="text" class="form-control" id="ninjaFirstName" placeholder="Ninja First Name" ng-model="ninja.firstName" ng-required="true"
-                           required/>
-                </div>
-                <div class="form-group">
-                    <label for="ninjaLastName" class="sr-only">Ninja Last Name</label>
-                    <input type="text" class="form-control" id="ninjaLastName" placeholder="Ninja Last Name" ng-model="ninja.lastName" ng-required="true"
-                           required/>
-                </div>
-                <div class="form-group">
-                    <label for="ninjaBday" class="control-label">Ninja Birthday*</label>
-
-                    <div class="input-group" ng-init="opened=false">
-                        <input type="date" class="form-control" id="ninjaBday" datepicker-popup ng-model="ninja.birthday" is-open="opened" min-date="vm.minDate"
-                               max-date="vm.maxDate" ng-required="true" close-text="Close" min="1999-02-02" max="2009-02-02" required/>
-                        <span class="input-group-addon">
-                            <i class="fa fa-calendar fa-fw" ng-click="opened = !opened"></i>
-                        </span>
-                    </div>
-                </div>
-                <div class="form-group" ng-show="vm.form.ninjas.length > 1">
-                    <i class="fa fa-trash-o fa-lg" ng-click="vm.remove(ninja)" tooltip="Remove Ninja" tooltip-placement="right"></i>
-                </div>
-
-                <!--TODO: take inline styles out and put on stylesheet-->
-                <div class="form-group" style="margin-top: 15px">
-                    <p class="control-label">We run a range of activities for the ninjas, what activities would they be interested in? (Tick all that apply)</p>
-
-                    <div class="checkbox" ng-repeat="activity in ninja.activities">
-                        <label for="activities" style="padding-right: 15px; padding-top:15px">
-                            <input type="checkbox" id="activities" ng-model="activity.selected"/>
-                            {{activity.name}}
-                        </label>
-                    </div>
-                </div>
+        <div class="column is-4 control">
+            <label class="label">Email Address</label>
+            <p class="control">
+                <input type="email" class="input" name="parentEmail" placeholder="Email Address" ng-model="vm.applicant.parent.email" required/>
+            </p>
+        </div>
+        <div class="column is-2 control">
+            <label class="label">Phone Number</label>
+            <p class="control">
+                <input type="tel" class="input" name="parentPhoneNumber" placeholder="Phone Number" ng-model="vm.applicant.parent.phone" required/>
+            </p>
+        </div>
+        <div class="column control" ng-if="!vm.applicant.isExternal">
+            <label class="checkbox">
+                <input type="checkbox" ng-model="vm.applicant.parent.isBwEmployee"/>
+                Are you a Bankwest employee?
+            </label>
+        </div>
+    </div>
+    <div ng-if="!vm.applicant.isExternal && !vm.applicant.parent.isBwEmployee">
+        <h3 class="title">Bankwest Contact</h3>
+        <div class="columns">
+            <div class="column is-3 control">
+                <label class="label">First Name</label>
+                <p class="control">
+                    <input type="text" class="input" name="parentFirstName" placeholder="Parent First Name" ng-model="vm.applicant.bwContact.firstName" ng-required="!vm.applicant.isExternal && !vm.applicant.parent.isBwEmployee"/>
+                </p>
             </div>
+            <div class="column is-3 control">
+                <label class="label">Last Name</label>
+                <p class="control">
+                    <input type="text" class="input" name="parentLastName" placeholder="Parent Last Name" ng-model="vm.applicant.bwContact.lastName" ng-required="!vm.applicant.isExternal && !vm.applicant.parent.isBwEmployee"/>
+                </p>
+            </div>
+        </div>
+    </div>
+    <h3 class="title">Photo Release Waiver</h3>
+    <p class="content">{{vm.text.photoWaiver}}</p>
+    <p class="control content">
+        <label class="checkbox">
+            <input type="checkbox" ng-model="vm.applicant.photoPermission" required/>
+            {{vm.text.photoWaiverSubtext}}
+        </label>
+    </p>
+    <h3 class="title">Comments</h3>
+    <label class="label">Any further comments?</label>
+    <p class="control">
+        <textarea class="textarea" ng-model="vm.applicant.comments" placeholder="Comments" ></textarea>
+    </p>
+    <p class="control">
+        <button type="submit" class="button is-primary" ng-click="vm.submit()">Submit Registration</button>
+    </p>
+</form>
 
-            <div class="form-group">
-                <button type="button" class="btn btn-success btn-sm" ng-click="vm.add()">Add Another Ninja</button>
-            </div>
-            <div class="form-group">
-                <p>* Note that this event is only ninjas aged 7 to 17 and all ninjas under the age of 12 must be accompanied by an adult at all times</p>
-            </div>
-            <br/>
+    <!--<div class="row">
 
             <h4>Parent/Guardian Information:</h4>
             <div class="form-inline">
                 <div class="form-group">
                     <label for="parentFirstName" class="sr-only">Parent/Guardian First Name</label>
-                    <input type="text" class="form-control" id="parentFirstName" placeholder="Parent First Name" ng-model="vm.form.parent.firstName"
+                    <input type="text" class="form-control" id="parentFirstName" placeholder="Parent First Name" ng-model="vm.applicant.parent.firstName"
                            ng-required="true" required/>
                 </div>
                 <div class="form-group">
                     <label for="parentLastName" class="sr-only">Parent/Guardian Last Name</label>
-                    <input type="text" class="form-control" id="parentLastName" placeholder="Parent Last Name" ng-model="vm.form.parent.lastName"
+                    <input type="text" class="form-control" id="parentLastName" placeholder="Parent Last Name" ng-model="vm.applicant.parent.lastName"
                            ng-required="true" required/>
                 </div>
                 <div class="form-group">
                     <label for="parentEmail" class="sr-only">Parent Email</label>
-                    <input type="email" class="form-control" id="parentEmail" placeholder="Parent Email" ng-model="vm.form.parent.email"
+                    <input type="email" class="form-control" id="parentEmail" placeholder="Parent Email" ng-model="vm.applicant.parent.email"
                            ng-required="true" required/>
                 </div>
                 <div class="form-group">
                     <label for="parentPhone" class="sr-only">Parent Phone Number</label>
-                    <input type="text" class="form-control" id="parentPhone" placeholder="Parent Phone Number" ng-model="vm.form.parent.phone"
+                    <input type="text" class="form-control" id="parentPhone" placeholder="Parent Phone Number" ng-model="vm.applicant.parent.phone"
                            ng-required="true" required/>
                 </div>
             </div>
@@ -106,11 +148,11 @@
                 <div class="form-inline">
                     <div class="form-group">
                         <label for="bwFirstName" class="sr-only">Bankwest Contact First Name</label>
-                        <input type="text" class="form-noncontrol" id="bwFirstName" placeholder="Contact First Name" ng-model="vm.form.bwContact.firstName" />
+                        <input type="text" class="form-noncontrol" id="bwFirstName" placeholder="Contact First Name" ng-model="vm.applicant.bwContact.firstName" />
                     </div>
                     <div class="form-group">
                         <label for="bwLastName" class="sr-only">Bankwest Contact Last Name</label>
-                        <input type="text" class="form-noncontrol" id="bwLastName" placeholder="Contact Last Name" ng-model="vm.form.bwContact.lastName" />
+                        <input type="text" class="form-noncontrol" id="bwLastName" placeholder="Contact Last Name" ng-model="vm.applicant.bwContact.lastName" />
                     </div>
                 </div>
             </div>
@@ -124,7 +166,7 @@
             </p>
             <div class="checkbox">
                 <label for="photoWaiver">
-                    <input type="checkbox" id="photoWaiver" ng-model="vm.form.photoPermission" required/>By checking this box, you understand and give
+                    <input type="checkbox" id="photoWaiver" ng-model="vm.applicant.photoPermission" required/>By checking this box, you understand and give
                     permission for CoderDojo WA and Bankwest to use photomedia of my child at the Dojo event to promote the CoderDojo movement.
                 </label>
             </div>
@@ -132,7 +174,7 @@
 
             <div class="form-group">
                 <label for="comments" class="control-label">Any Additional Comments?</label>
-                <textarea rows="2" columns="50" id="comments" ng-model="vm.form.comments" class="form-control"></textarea>
+                <textarea rows="2" columns="50" id="comments" ng-model="vm.applicant.comments" class="form-control"></textarea>
             </div>
 
 
@@ -141,4 +183,4 @@
             </div>
         </form>
     </div>
-</div>
+</div>-->
