Setup text constants

--- a/client/app/passcode/passcode.html
+++ b/client/app/passcode/passcode.html
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-md-12">
             <p>CoderDojo is a programming club for young people between the ages of 7 and 17. At a Dojo, young people learn how to code, develop websites,
-                apps, programs, build and program robots and explore technology in an informal and creative environment. The first ever Girls CoderDojo Event
+                apps, programs, build and program robots and explore technology in an informal and creative environment. The Annual Girls CoderDojo Event
                 at Bankwest is aimed to help bridge the gender gap in technology based fields for now and future generations. The event will be run by all
                 female mentors actively working in the technology field who hope to inspire the female ninjas of CoderDojo WA.</p>
             <br/>
