--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -43,7 +43,8 @@
         </button>
     </p>
     <h3 class="title">Actvities</h3>
-    <p class="content">We run a range of activities for the ninjas, what activities would they be interested in? (Tick all that apply)</p>
+    <p class="content">We run a range of activities for the ninjas, what activities would they be interested in? (Tick all that apply) Note: this does not
+        effect what activities they can partake in</p>
     <p class="control">
         <div ng-repeat="activity in vm.text.activities">
             <label class="checkbox">
@@ -121,3 +122,5 @@
         <button type="submit" class="button is-primary" ng-click="vm.submit()">Submit Registration</button>
     </p>
 </form>
+</br>
+</br>
