--- a/client/app/passcode/passcode.html
+++ b/client/app/passcode/passcode.html
@@ -5,7 +5,7 @@
             <h2>{{vm.eventDate}}</h2>
         </div>
         <div class="col-md-4 text-center">
-            <i class="fa fa-female fa-5x"></i>&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-female large"></i>&nbsp;&nbsp;&nbsp;
             <span><img src="images/coderdojo.png"/></span>
         </div>
         <div class="col-md-4 text time">
@@ -43,7 +43,7 @@
                     <input type="text" class="form-control" id="code" ng-model="vm.passcode" name="passcode" required ng-class="{'is-danger': form.passcode.$error.invalid}" placeholder="Registration Code">
                     <span class="help is-danger" ng-show="form.passcode.$error.invalid">Passcode is incorrect.</span>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="button is-primary">Submit</button>
             </form>
         </div>
     </div>
