Changed html tags to use bluma instead of bootstrap and fixed styling

--- a/client/app/accept/accept.html
+++ b/client/app/accept/accept.html
@@ -1,12 +1,14 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <h1 class="subtitle">Congratulations!</h1>
-            <p class="text-center"><b></p>
-                {{vm.text.acceptedMessage}}
-            <br/>
-            <p class="text-center">If you have any further questions please contact us at: <b>coderdojo@bankwest.com.au</b>
-            </p>
-        </div>
+<div class="columns">
+    <div class="column is-two-thirds is-offset-2">
+        <h1 class="subtitle center-text">Congratulations!</h1>
+
+        <p class="center-text">
+            {{vm.text.acceptedMessage}}
+        </p>
+        <br/>
+
+        <p class="center-text">If you have any further questions please contact us at: <b>coderdojo@bankwest.com.au</b>
+        </p>
+
     </div>
 </div>
