--- a/client/app/error/error.html
+++ b/client/app/error/error.html
@@ -1,8 +1,6 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3 text-center">
-			<h1 class="subtitle">Error</h1>
-			<h5>{{vm.text.errorMessage}}</h5>
-		</div>
-	</div>
+<div class="columns">
+    <div class="column is-two-thirds is-offset-2 center-text">
+        <h1 class="subtitle">Error</h1>
+        <h5>{{vm.text.errorMessage}}</h5>
+    </div>
 </div>
