--- a/client/app/closed/closed.html
+++ b/client/app/closed/closed.html
@@ -1,10 +1,8 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-			<h1 class="subtitle">Sign ups are closed</h1>
-			<h5 class="text-center">{{vm.text.closedMessage}}</h5>
-            <br />
-            <h5 class="text-center">For more information contact:&nbsp;<b>coderdojo@bankwest.com.au</b></h5>
-		</div>
-	</div>
+<div class="columns">
+    <div class="center-text column is-two-thirds is-offset-2">
+        <h1 class="subtitle">Sign ups are closed</h1>
+        <h5>{{vm.text.closedMessage}}</h5>
+        <br />
+        <h5>For more information contact:&nbsp;<b>coderdojo@bankwest.com.au</b></h5>
+    </div>
 </div>
