Photo permissions option to be optional

--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -114,7 +114,7 @@
     <p class="content">{{vm.text.photoWaiver}}</p>
     <p class="control content">
         <label class="checkbox">
-            <input type="checkbox" ng-model="vm.applicant.photoPermission" required/>
+            <input type="checkbox" ng-model="vm.applicant.photoPermission">
             {{vm.text.photoWaiverSubtext}}
         </label>
     </p>
