Photo consent edits and css colours

--- a/client/app/accept/accept.html
+++ b/client/app/accept/accept.html
@@ -1,6 +1,6 @@
 <div class="columns">
     <div class="column is-two-thirds is-offset-2">
-        <h1 class="subtitle center-text">Congratulations!</h1>
+        <h1 class="subtitle center-text close">Congratulations!</h1>
 
         <p class="center-text">
             {{vm.text.acceptedMessage}}
