--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -112,8 +112,8 @@
     </div>
     <h3 class="title">Photo Release Waiver</h3>
     <p class="content">{{vm.text.photoWaiver}}</p>
-    <p class="control content">
-        <label class="checkbox">
+    <p class="control content photo">
+        <label class="checkbox photo">
             <input type="checkbox" ng-model="vm.applicant.photoPermission">
             {{vm.text.photoWaiverSubtext}}
         </label>
